use generational ZGC on JDK 21
Signed-off-by: Ludovic Orban <lorban@bitronix.be>